[project]
name = "kyopro"
version = "0.1.0"
description = ""
authors = [{ name = "wakabame", email = "wakabame@gmail.com" }]

requires-python = "==3.11.4"

dependencies = []

[tool.rye]
managed = true
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]
