[project]
name = "kyopro"
version = "0.1.0"
description = ""
authors = [{ name = "wakabame", email = "wakabame@gmail.com" }]

requires-python = "==3.11.4"

dependencies = []

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.3",
]

[tool.ruff]
exclude = [".venv"]
line-length = 140
extend-ignore = ["E741"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]
